@BugFix createAccount - fixed alignment css issue of a page

--- a/ui/buyer_catalogue/app/modules/pages/manageCampaign/createaccount/create-account.tmpl.css
+++ b/ui/buyer_catalogue/app/modules/pages/manageCampaign/createaccount/create-account.tmpl.css
@@ -39,3 +39,13 @@
 .modal-open {
   overflow-y: scroll;
 }
+.content{
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+}
+.breadcrumb{
+	width:50%;
+	margin-left: auto;
+	margin-right: auto;
+}
